Fix shitty image resolution; added double jumping to make more fun

--- a/styling.css
+++ b/styling.css
@@ -50,6 +50,7 @@ header h1 {
     width: 1000px;
     height: 400px;
     margin: auto;
+    box-sizing: content-box;
 }
 #before_play {
     position: absolute;
@@ -81,6 +82,7 @@ header h1 {
     margin: auto;
     background-color: #1e90ff;
     padding: 10px;
+    cursor: pointer;
 }
 .directions {
     text-align: left;
